--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
 </head>
 <body>
     <h1>Recipes</h1>
+    <br>
+    <a href="./recipes/kungpaochicken.html">Kung Pao Chicken</a>
+    <br>
+    <a href="./recipes/honeygarlicchckenbreast.html">Honey Garlic Chicken Breast</a>
 </body>
 </html>
